fixed animation on visibility text

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -2437,11 +2437,11 @@ body
 					transform: translate(6rem, 0)
 		.project
 			.head-container
-				opacity: 0
-				transform: translate(0, 0) !important
+				// opacity: 0
+				// transform: translate(0, 0) !important
 			.text-container
 				opacity: 0
-				transform: translate(-6rem, -50%) !important
+				transform: translate(-6rem, 0) !important
 .showroom-container
 	.text-container
 		+rem(left, 160px)
